# brainfuck

./: .gitignore  CHANGELOG.md  LICENSE  README.md  brainfuck.cabal
app/: Main.hs
src/: Brainfuck.hs  Types.hs
